--- a/projects.html
+++ b/projects.html
@@ -41,8 +41,8 @@
 
             <p>In this project, I applied diffusion models — a type of generative AI model that is behind popular image generators such as Dall-E 2 and Stable Diffusion — for superconductor discovery. In particular, this work focused on applying conditional diffusion models (with <a href="https://arxiv.org/abs/2108.02938" target="_blank" class="inline-link">ILVR</a>) to computationally discovery potential <i>new families</i> of superconductors for the first time. In the past, computational approaches to superconductor discovery could only generate new superconductors from known families and were unable to generate any new families — this work resolves that limitation.</p>
 
-            <img src="assets/290336961-fdf28dd9-4fdc-406b-bd3e-d4d67932ddc8.png" 
-                alt="Diffusion Process Illustration" 
+            <img src="Diagram.JPG" 
+                alt="Process Diagram" 
                 class="centered-image">       
 
 
