--- a/projects.html
+++ b/projects.html
@@ -8,12 +8,12 @@
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="navbar-content">
-                <a href="index.html" class="nav-title" style="text-decoration: none;">Samuel Yuan</a>
+                <a href="index.html" class="nav-title" style="text-decoration: none;">Ishan Jha</a>
                 <div class="nav-links">
                     <a href="projects.html" class="nav-link">Projects</a>
                     <!-- <a href="assets/Main_e5905a25-9683-46d6-865c-aaed7ef06243_720x.png" target="_blank" class="nav-link">CV</a> -->
-                    <a href="https://scholar.google.com/citations?user=8RGyM2cAAAAJ&hl=en" target="_blank" class="nav-link">Google Scholar</a>
-                    <a href="https://github.com/sdkyuanpanda" target="_blank" class="nav-link">GitHub</a>
+                    <a href="https://scholar.google.com/citations?user=KJxBoMAAAAAJ&hl=en&" target="_blank" class="nav-link">Google Scholar</a>
+                    <a href="https://github.com/ishanyjha" target="_blank" class="nav-link">GitHub</a>
                 </div>
             </div>
         </nav>
