--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
         </div>
 
         <!-- Project Introduction -->
+        <center></center><p><i></i>Shown above: Optical microscopy I did of the leaf tissue, showing the mesophyll parenchyma.</i></p></center><br>
         <p>I've worked a few projects spanning from math, to coding and simulation, you can view some of them below:</p>
 
 
@@ -31,8 +32,6 @@
         <!-- TODO: Make this a table of contents with red bold numbers and centered and more linespacing-->
         <ol style="margin-bottom: 2em;">
             <li><a href="#superdiff" class="inline-link">AI-Powered VR Simulations for Semiconductor Industry Training and Education</a></li>
-            <li><a href="#asteroid" class=</a></li>
-            <li><a href="#firebreak" class="inline-link"></a></li>
         </ol>
 
         <!-- Projects Section -->
